[tool.poetry]
name = "okp4_grpc_client"
version = "1.2.0"
description = "Python gRPC client for ØKP4 and by extension, CØSMOS SDK based blockchains."
authors = ["OKP4 <opensource@okp4.org>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/okp4/okp4-cosmos-proto"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
