[package]
name = "cosmos-sdk-grpc-client"
description = "OKP4 CØSMOS gRPC client libraries based on Protobuf definitions."
edition = "2021"
license-file = "LICENSE"
readme = "rust/cosmos_sdk_grpc_client/README.md"
repository = "https://github.com/okp4/okp4-cosmos-proto"
version = "1.2.0"
authors = ["OKP4"]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tendermint-proto = "0.32"
tonic.workspace = true

[features]
default = []
## @@protoc_insertion_point(features)