[package]
name = "okp4_grpc_client"
description = "OKP4 CØSMOS gRPC client libraries based on Protobuf definitions."
edition = "2021"
license-file = "LICENSE"
readme = "rust/okp4_grpc_client/README.md"
repository = "https://github.com/okp4/okp4-cosmos-proto"
version = "1.2.0"
authors = ["OKP4"]

[dependencies]
prost = "0.10"
tonic = "0.7"
